--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "moduleResolution": "Node",
     "module": "ESNext",
     "target": "ES2020",
-    "allowJs": true
+    "allowJs": true,
+    "lib": ["ES2021.String", "dom"]
   }
 }
