--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "module": "ESNext",
     "target": "ES2020",
     "allowJs": true,
+    "allowSyntheticDefaultImports": true,
     "lib": ["ES2021.String", "dom"]
   }
 }
