Replace less with scss

--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "cross-env": "^7.0.3",
     "css-loader": "^6.8.1",
     "cssimportant-loader": "^0.4.0",
-    "less": "^4.2.0",
-    "less-loader": "^11.1.4",
+    "sass": "^1.69.7",
+    "sass-loader": "^13.3.3",
     "style-loader": "^3.3.3",
     "terser-webpack-plugin": "^5.3.10",
     "ts-loader": "^9.5.1",
