--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -6,19 +6,23 @@ on:
       - v*
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-
       - name: Setup node
         uses: actions/setup-node@v3
         with:
           node-version: "lts/*"
           cache: "npm"
-
       - run: npm ci
       - run: npm run build
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: actions/checkout@v3
+
       - name: Get version from tag
         id: tag_name
         run: |
