--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -10,15 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - uses: .github/actions/build
 
-      - name: Setup node
-        uses: actions/setup-node@v3
-        with:
-          node-version: "lts/*"
-          cache: "npm"
-
-      - run: npm ci
-      - run: npm run build
       - name: Get version from tag
         id: tag_name
         run: |
