--- a/.github/workflows/deploy-preview.yaml
+++ b/.github/workflows/deploy-preview.yaml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: /.github/actions/build
+      - uses: ./.github/actions/build
 
       - name: Deploy Preview
         uses: peaceiris/actions-gh-pages@v3
