--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "stash-checker",
   "description": "Add checkmarks on porn websites to scenes/performers that are present in your own Stash instance.",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "author": {
     "name": "timo95",
     "email": "24251362+timo95@users.noreply.github.com"
@@ -18,20 +18,20 @@
   "private": true,
   "devDependencies": {
     "@types/greasemonkey": "^4.0.7",
-    "@types/node": "^20.11.30",
     "browserslist": "^4.23.0",
     "cross-env": "^7.0.3",
-    "css-loader": "^6.10.0",
+    "css-loader": "^7.1.1",
     "cssimportant-loader": "^0.4.0",
-    "sass": "^1.72.0",
-    "sass-loader": "^13.3.3",
-    "style-loader": "^3.3.4",
+    "sass": "^1.75.0",
+    "sass-loader": "^14.2.0",
+    "style-loader": "^4.0.0",
     "terser-webpack-plugin": "^5.3.10",
+    "tippy.js": "^6.3.7",
     "ts-loader": "^9.5.1",
-    "typescript": "^5.4.3",
+    "typescript": "^5.4.5",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.2",
+    "webpack-dev-server": "^5.0.4",
     "webpack-sources": "^3.2.3",
     "webpack-userscript": "^3.2.2"
   }
