WIP settings section for custom display rules

--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
   "private": true,
   "devDependencies": {
     "@types/greasemonkey": "^4.0.7",
+    "@types/sortablejs": "^1.15.8",
     "browserslist": "^4.23.0",
     "cross-env": "^7.0.3",
-    "css-loader": "^7.1.1",
+    "css-loader": "^7.1.2",
     "cssimportant-loader": "^0.4.0",
-    "sass": "^1.75.0",
-    "sass-loader": "^14.2.0",
+    "sass": "^1.77.4",
+    "sass-loader": "^14.2.1",
+    "sortablejs": "^1.15.2",
     "style-loader": "^4.0.0",
     "terser-webpack-plugin": "^5.3.10",
     "tippy.js": "^6.3.7",
