--- a/package.json
+++ b/package.json
@@ -19,19 +19,20 @@
   "devDependencies": {
     "@types/greasemonkey": "^4.0.7",
     "@types/sortablejs": "^1.15.8",
-    "browserslist": "^4.23.0",
+    "browserslist": "^4.23.2",
     "cross-env": "^7.0.3",
     "css-loader": "^7.1.2",
     "cssimportant-loader": "^0.4.0",
-    "sass": "^1.77.4",
+    "sass": "^1.77.8",
     "sass-loader": "^14.2.1",
     "sortablejs": "^1.15.2",
     "style-loader": "^4.0.0",
     "terser-webpack-plugin": "^5.3.10",
     "tippy.js": "^6.3.7",
     "ts-loader": "^9.5.1",
-    "typescript": "^5.4.5",
-    "webpack": "^5.91.0",
+    "typescript": "^5.5.3",
+    "urlpattern-polyfill": "^10.0.0",
+    "webpack": "^5.93.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4",
     "webpack-sources": "^3.2.3",
